# GameServer

./: .gitignore  Makefile  README.md  init.sh  pyproject.toml
client/: README.md  app.js  index.html
examples/: demo_api.py  demo_logger.py  demo_ws.py  demo_ws_client.py
gameserver/: __init__.py  main.py
gameserver/api/: __init__.py  router.py
gameserver/api/endpoints/: agent.py  auth.py  games.py  metaverse.py  players.py  rotk.py
gameserver/models/: __init__.py  user.py
gameserver/storage/configs/roles/: ac.yaml  czne.yaml  garen.yaml  jdf.yaml  pa.yaml  template.yaml  tjplb.yaml  wqdlb.yaml  zbdlb.yaml  zhplb.yaml
gameserver/storage/configs/topics/: topic_v1.yaml  topic_v2.yaml  topic_v3.yaml
gameserver/storage/users/: api_keys.yaml  users.yaml
gameserver/utils/: __init__.py  auth.py  ws_auth.py
gameserver/utils/auth/: api_auth.py  ws_auth.py
gameserver/utils/log/: README.md  common.py  logger.py
gameserver/ws/: __init__.py  router.py
gameserver/ws/endpoints/: README.md  __init__.py  game_events.py  metaverse.py
gameserver/ws/endpoints/component/: annotation.py  event_handler.py  metaverse_connection_manager.py
gameserver/ws/endpoints/manager/: metaverse_connection_manager.py
gameserver/ws/endpoints/metaverse/: mataverse.py
gameserver/ws/endpoints/metaverse/core/: connection_manager.py
gameserver/ws/endpoints/metaverse_v2/: __init__.py  mataverse.py
logs/: IMPROVEMENTS.md  test_error_handling.py
scripts/: generate_api_key.py
tests/: README.md  __init__.py  test_api_games.py  test_api_players.py  test_auth.py  test_websocket.py
(+23 files in other folders)
